--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facebook</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="shortcut icon" href="./icons/favicon/facebook.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./icons/favicon/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/10c6a50922.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/10c6a50922.js" crossorigin="anonymous"></script>
     <script src="./js/function.js"></script>
