hi ia m building 2 page

--- a/html/shop.html
+++ b/html/shop.html
@@ -803,7 +803,10 @@
 
 
    <main class="main-con">
-          
+          <div class="main-con--grid">
+              <div class="main-con--grid--ox"></div>
+              <div class="main-con--grid--ox"></div>
+          </div>
    </main>
 </body>
 
