--- a/html/shop.html
+++ b/html/shop.html
@@ -802,12 +802,16 @@
     </nav>
 
 
-   <main class="main-con">
-          <div class="main-con--grid">
-              <div class="main-con--grid--ox"></div>
-              <div class="main-con--grid--ox"></div>
-          </div>
-   </main>
+    <main class="main-con">
+        <div class="main-con--grid">
+            <div class="main-con--grid--sidebar">
+                <div class="main-con--grid--sidebar--fixed-part">
+
+                </div>
+
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
