--- a/html/shop.html
+++ b/html/shop.html
@@ -12,6 +12,10 @@
     <script src="https://kit.fontawesome.com/10c6a50922.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/10c6a50922.js" crossorigin="anonymous"></script>
     <script src="./js/function.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -806,7 +810,16 @@
         <div class="main-con--grid">
             <div class="main-con--grid--sidebar">
                 <div class="main-con--grid--sidebar--fixed-part">
+                    <div class="main-con--grid--sidebar--fixed-part--heading-part">
+                        <p class="main-con--grid--sidebar--fixed-part--heading-part--heading">
+                            Marketplace
+                        </p>
+                    </div>
+                    <div class="main-con--grid--sidebar--fixed-part--heading-part--setting-part">
+                        <div class="main-con--grid--sidebar--fixed-part--search-part">
 
+                        </div>
+                    </div>
                 </div>
 
             </div>
