--- a/html/shop.html
+++ b/html/shop.html
@@ -814,11 +814,15 @@
                         <p class="main-con--grid--sidebar--fixed-part--heading-part--heading">
                             Marketplace
                         </p>
-                    </div>
-                    <div class="main-con--grid--sidebar--fixed-part--heading-part--setting-part">
-                        <div class="main-con--grid--sidebar--fixed-part--search-part">
-
+                        <div class="main-con--grid--sidebar--fixed-part--heading-part--setting-part">
+                            <i data-visualcompletion="css-img"
+                                class="main-con--grid--sidebar--fixed-part--heading-part--setting-part--icon"
+                                style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yk/r/qyJJmKM4Jh8.png&quot;); background-position: -42px -228px; background-size: auto; width: 20px; height: 20px; background-repeat: no-repeat; display: inline-block; user-select: auto;"></i>
                         </div>
+
+                    </div>
+                    <div class="main-con--grid--sidebar--fixed-part--search-part">
+                        <input type="search" class="main-con--grid--sidebar--fixed-part--search-part--search"/>
                     </div>
                 </div>
 
