--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                             </g>
                         </svg>
                         <i data-visualcompletion="css-img" class="hu5pjgll m6k467ps"
-                            style="-webkit-filter: invert(89%) sepia(6%) hue-rotate(185deg); background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yf/r/iMhgsptggt7.png&quot;); background-position: -84px -67px; background-size: auto; width: 20px; height: 20px; background-repeat: no-repeat; display: inline-block;"></i>
+                            style="-webkit-filterinvert: (89%) sepia(6%) hue-rotate(185deg); background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yf/r/iMhgsptggt7.png&quot;); background-position: -84px -67px; background-size: auto; width: 20px; height: 20px; background-repeat: no-repeat; display: inline-block;"></i>
                     </div>
                 </div>
                 <div class="res-post-con--grid--post--main">
