listening is preparing

--- a/html/shop.html
+++ b/html/shop.html
@@ -851,7 +851,9 @@
                 </div>
                 <div class="main-con--grid--sidebar--main-part">
                     <div class="main-con--grid--sidebar--main-part--listening-part">
+                        <div class="main-con--grid--sidebar--main-part--listening-part--active-box">
 
+                        </div>
                     </div>
                 </div>
             </div>
