--- a/html/shop.html
+++ b/html/shop.html
@@ -852,7 +852,25 @@
                 <div class="main-con--grid--sidebar--main-part">
                     <div class="main-con--grid--sidebar--main-part--listening-part">
                         <div class="main-con--grid--sidebar--main-part--listening-part--active-box">
-
+                            <div class="main-con--grid--sidebar--main-part--listening-part--active-box--icon-con">
+                                <div class="main-con--grid--sidebar--main-part--listening-part--active-box--icon-con--circle">
+                                    <i data-visualcompletion="css-img" class="main-con--grid--sidebar--main-part--listening-part--active-box--icon-con--circle--icon" style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yN/r/8DhOAEmbsqD.png&quot;); background-position: 0px -788px; background-size: auto; width: 20px; height: 20px; background-repeat: no-repeat; display: inline-block; user-select: auto;"></i>
+                                </div>
+                            </div>
+                            <div class="main-con--grid--sidebar--main-part--listening-part--active-box--txt-con">
+                                <p class="main-con--grid--sidebar--main-part--listening-part--active-box--txt-con--txt"> Browser All</p>
+                            </div>
+                        </div>
+                        <div class="main-con--grid--sidebar--main-part--listening-part--normal-box">
+                            <div class="main-con--grid--sidebar--main-part--listening-part--normal-box--icon-con">
+                                <div class="main-con--grid--sidebar--main-part--listening-part--normal-box--icon-con--circle">
+                                    <i data-visualcompletion="css-img" class="main-con--grid--sidebar--main-part--listening-part--normal-box--icon-con--circle--icon" style="                    -webkit-filter: invert(89%), sepia(6%) hue-rotate(185deg) !important;
+                                    background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yN/r/8DhOAEmbsqD.png&quot;); background-position: 0px -389px; background-size: auto; width: 20px; height: 20px; background-repeat: no-repeat; display: inline-block; user-select: auto;"></i>
+                                </div>
+                            </div>
+                            <div class="main-con--grid--sidebar--main-part--listening-part--normal-box--txt-con">
+                                <p class="main-con--grid--sidebar--main-part--listening-part--normal-box--txt-con--txt">Koch Bhi</p>
+                            </div>
                         </div>
                     </div>
                 </div>
