--- a/html/shop.html
+++ b/html/shop.html
@@ -910,8 +910,9 @@
                             </div>
                         </div>
 
-                        <div class="main-con--grid--sidebar--main-part--listening-part--normal-box">
-                            <div class="main-con--grid--sidebar--main-part--listening-part--normal-box--icon-con">
+                        <div
+                            class="main-con--grid--sidebar--main-part--listening-part--normal-box main-con--grid--sidebar--main-part--listening-part--normal-box--drop">
+                             <div class="main-con--grid--sidebar--main-part--listening-part--normal-box--icon-con">
                                 <div
                                     class="main-con--grid--sidebar--main-part--listening-part--normal-box--icon-con--circle">
                                     <i data-visualcompletion="css-img"
@@ -923,20 +924,39 @@
                                 <p class="main-con--grid--sidebar--main-part--listening-part--normal-box--txt-con--txt">
                                     Buying</p>
                             </div>
+                            <div class="main-con--grid--sidebar--main-part--listening-part--normal-box--drop--con">
+                                <i data-visualcompletion="css-img" class="main-con--grid--sidebar--main-part--listening-part--normal-box--drop--con--icon"
+                                style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yG/r/AIv5-9MmZfT.png&quot;); background-position: -131px -88px; background-size: auto; width: 16px; height: 16px; background-repeat: no-repeat; display: inline-block; user-select: auto;"></i>
+                            </div>
+                            
+
                         </div>
-                        <div class="main-con--grid--sidebar--main-part--listening-part--normal-box">
+                        <div
+                            class="main-con--grid--sidebar--main-part--listening-part--normal-box main-con--grid--sidebar--main-part--listening-part--normal-box--drop">
                             <div class="main-con--grid--sidebar--main-part--listening-part--normal-box--icon-con">
                                 <div
                                     class="main-con--grid--sidebar--main-part--listening-part--normal-box--icon-con--circle">
-                                    <i data-visualcompletion="css-img" class="main-con--grid--sidebar--main-part--listening-part--normal-box--icon-con--circle--icon" style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yM/r/6ZFwAmb0kCZ.png&quot;); background-position: -21px -205px; background-size: auto; width: 20px; height: 20px; background-repeat: no-repeat; display: inline-block; user-select: auto;"></i>
+                                    <i data-visualcompletion="css-img"
+                                        class="main-con--grid--sidebar--main-part--listening-part--normal-box--icon-con--circle--icon"
+                                        style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yM/r/6ZFwAmb0kCZ.png&quot;); background-position: -21px -205px; background-size: auto; width: 20px; height: 20px; background-repeat: no-repeat; display: inline-block; user-select: auto;"></i>
                                 </div>
                             </div>
                             <div class="main-con--grid--sidebar--main-part--listening-part--normal-box--txt-con">
                                 <p class="main-con--grid--sidebar--main-part--listening-part--normal-box--txt-con--txt">
                                     Selling</p>
                             </div>
+                            <div class="main-con--grid--sidebar--main-part--listening-part--normal-box--drop--con">
+                                <i data-visualcompletion="css-img" class="main-con--grid--sidebar--main-part--listening-part--normal-box--drop--con--icon"
+                                style="background-image: url(&quot;https://static.xx.fbcdn.net/rsrc.php/v3/yG/r/AIv5-9MmZfT.png&quot;); background-position: -131px -88px; background-size: auto; width: 16px; height: 16px; background-repeat: no-repeat; display: inline-block; user-select: auto;"></i>
+                            </div>
                         </div>
-
+                        <div class="main-con--grid--sidebar--main-part--listening-part--create">
+                            <p class="main-con--grid--sidebar--main-part--listening-part--create--txt">
+                                <span style="font-size: 2rem; margin-right: 0.3rem;margin-top: 0.5rem;">+</span> Create
+                                new listing
+                            </p>
+                        </div>
+                        <div class="main-con--grid--sidebar--main-part--listening-part--divider"></div>
                     </div>
                 </div>
             </div>
